--- a/src/Main/style.scss
+++ b/src/Main/style.scss
@@ -1,12 +1,12 @@
 .scrollable {
   width: 100vw;
   height: 100vh;
-  overflow-x: scroll;
+  overflow-y: scroll;
   scroll-snap-type: y mandatory;
 }
 .section {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   scroll-snap-align: start;
   > div {
     width: 100%;
@@ -22,16 +22,6 @@
   }
 }
 
-.section:nth-of-type(1) {
-  background: red;
-}
-.section:nth-of-type(2) {
-  background: #a0a0fa;
-}
-.section:nth-of-type(3) {
-  background: yellow;
-  opacity: 1;
-}
 
 .contents {
   top: 0;
@@ -45,7 +35,6 @@
     left: 50%;
     transform: translateX(-50%);
     opacity: 0;
-    padding: 0 2em;
 
     color: #2d2d2d;
     text-shadow: 0px 0px 4px rgba(#000, 0.2);
@@ -63,7 +52,7 @@
 .contents-bottom {
   bottom: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   position: fixed;
   cursor: default;
 
