--- a/src/Main/style.scss
+++ b/src/Main/style.scss
@@ -22,7 +22,6 @@
   }
 }
 
-
 .contents {
   top: 0;
   left: 0;
@@ -62,6 +61,7 @@
     transform: translateX(-50%);
     opacity: 0;
     padding: 0 2em;
+    width: 100%;
 
     color: white;
     text-shadow: 0px 0px 15px black;
