--- a/src/Main/style.scss
+++ b/src/Main/style.scss
@@ -85,7 +85,7 @@
   background-color: rgba(0, 0, 0, 0.7);
 
   cursor: pointer;
-  text-shadow: none;;
+  text-shadow: none;
 
   &:hover {
     background-color: rgba(0, 0, 0, 0.8);
@@ -96,7 +96,7 @@
     background-color: rgba(#fff, 0.8);
 
     &:hover {
-        background-color: rgba(#fff, 1);
+      background-color: rgba(#fff, 1);
     }
   }
 }
